5 Services and Networking/2 Demonstrate Basic Understanding of NetworkPolicies/5.2.2.1-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: febe
  namespace: ps
spec:
  podSelector:
    matchLabels:
      app: be
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: fe
    ports:
    - protocol: TCP
      port: 5432
